--- a/ui/rl/projects/show/src/lib/update-race/update-race.component.html
+++ b/ui/rl/projects/show/src/lib/update-race/update-race.component.html
@@ -10,7 +10,7 @@
     </div>
     <div>
         <lib-song-auto-complete
-          [showId]="raceId"
+          [showId]="showId"
           label="Song for Black Bike"
           formControlName="song1"></lib-song-auto-complete>
     </div>
@@ -23,7 +23,7 @@
     </div>
     <div>
         <lib-song-auto-complete
-          [showId]="raceId"
+          [showId]="showId"
           label="Song for White Bike"
           formControlName="song2"></lib-song-auto-complete>
     </div>
