--- a/ui/rl/projects/song/src/lib/songs.component.html
+++ b/ui/rl/projects/song/src/lib/songs.component.html
@@ -10,7 +10,7 @@
         </mat-form-field>
     </div>
   </div>
-  
+
   <div>
     <ui-button-list>
       <button mat-flat-button color="primary" [routerLink]="'create'">
@@ -39,15 +39,15 @@
       <th mat-header-cell *matHeaderCellDef>Title</th>
       <td mat-cell *matCellDef="let element"> {{element.name}} </td>
     </ng-container>
-  
+
     <ng-container matColumnDef="artist">
       <th mat-header-cell *matHeaderCellDef>Artist</th>
       <td mat-cell *matCellDef="let element"> {{element.artist}} </td>
     </ng-container>
-    
+
     <ng-container matColumnDef="actions">
       <th mat-header-cell *matHeaderCellDef>Actions</th>
-      <td mat-cell *matCellDef="let element"> 
+      <td mat-cell *matCellDef="let element">
         <button mat-icon-button aria-label="Delete Song" (click)="deleteSong(element)">
             <mat-icon>delete</mat-icon>
           </button>
@@ -59,11 +59,11 @@
           </button>
       </td>
     </ng-container>
-    
+
     <tr mat-header-row *matHeaderRowDef="['selectable', 'artist', 'name', 'actions']"></tr>
-    <tr mat-row *matRowDef="let row; columns: ['selectable', 'artist', 'name', 'actions'];"></tr>
+    <tr mat-row *matRowDef="let row; columns: ['selectable', 'artist', 'name', 'actions'];" [ngClass]="{'song-blocked': !row.selectable}"></tr>
   </table>
-  
+
 
 <ui-button-list>
     <button mat-flat-button color="primary" [routerLink]="'create'">Add Song</button>
